corrected z-index for the modal from 2 to 30

--- a/css/global.css
+++ b/css/global.css
@@ -447,7 +447,7 @@ form {
 	color: var(--color-onyx);
 	border: 1px solid var(--body-background-color);
 	border-radius: 4px;
-	z-index: 2;
+	z-index: 30;
 }
 
 .modal-wrapper {
